--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,15 +15,8 @@
       href="/intellicon-favicon.svg"
     />
     <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/intellicon-favicon.svg"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
+      rel="shortcut icon"
+      type="image/svg+xml"
       href="/intellicon-favicon.svg"
     />
     <link
